# itmo-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  admin.py  backup.py  charts.py  config.py  cross.py  db.py  fetcher.py  history2025.py  main.py  metrics.py  models.py  poller.py  service.py  texts.py
app/handlers/: __init__.py  commands.py  track.py  upload.py
tests/: __init__.py  fixtures.py  test_cross.py  test_fetcher.py  test_history2025.py  test_metrics.py  test_service.py
