[project]
name = "itmo-bot"
version = "1.0.0"
description = "Telegram-бот мониторинга конкурсных списков abit.itmo.ru: вероятность поступления, динамика, прогнозы"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.29",
    "asyncpg>=0.31",
    "httpx>=0.28",
    "matplotlib>=3.11",
    "pydantic-settings>=2.14",
    "redis>=8.0",
]

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.31",
    "ruff>=0.15",
    "ty>=0.0.58",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
# Единственные исключения — правила, официально несовместимые с ruff format
# (ruff сам предупреждает и требует их отключить при использовании форматтера).
# Ослаблений правил в проекте нет: noqa и per-file-ignores запрещены.
ignore = ["COM812", "ISC001"]
# Интерфейс бота на русском: кириллица и типографские знаки легитимны.
# RUF001-003 продолжают ловить обратный случай — случайную латиницу
# внутри русских слов.
allowed-confusables = [
    "а", "б", "в", "г", "д", "е", "ё", "ж", "з", "и", "й", "к", "л", "м",
    "н", "о", "п", "р", "с", "т", "у", "ф", "х", "ц", "ч", "ш", "щ", "ъ",
    "ы", "ь", "э", "ю", "я",
    "А", "Б", "В", "Г", "Д", "Е", "Ё", "Ж", "З", "И", "Й", "К", "Л", "М",
    "Н", "О", "П", "Р", "С", "Т", "У", "Ф", "Х", "Ц", "Ч", "Ш", "Щ", "Ъ",
    "Ы", "Ь", "Э", "Ю", "Я",
    "–", "×",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ty.environment]
python-version = "3.13"
